update adding day, month and year into user model => make filter start date and end date
